--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vite": "^3.1.0"
   },
   "dependencies": {
+    "firebase": "^9.15.0",
     "gh-pages": "^4.0.0",
     "three": "^0.144.0"
   }
